--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,8 +8,8 @@
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
 
     <application
-        android:allowBackup="true"
         android:name=".RangkirApp"
+        android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
         android:icon="@mipmap/ic_launcher"
@@ -18,6 +18,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.RangkirKu"
         tools:targetApi="31">
+        <activity
+            android:name=".ui.tracking.TrackingActivity"
+            android:exported="false" />
         <activity
             android:name=".ui.city.CityActivity"
             android:exported="false" />
@@ -32,7 +35,7 @@
         </activity>
         <activity
             android:name=".MainActivity"
-            android:exported="true"></activity>
+            android:exported="true" />
     </application>
 
 </manifest>
