--- a/app/build.gradle
+++ b/app/build.gradle
@@ -72,10 +72,11 @@ dependencies {
     implementation "androidx.navigation:navigation-ui-ktx:$navigation_version"
 
     // Room
-    def room_version = "2.2.6"
+    def room_version = "2.4.0-beta02"
     implementation "androidx.room:room-runtime:$room_version"
     implementation "androidx.room:room-ktx:$room_version"
     kapt "androidx.room:room-compiler:$room_version"
+//    annotationProcessor "androidx.room:room-compiler:$room_version"
 
     // Coroutines
     def coroutines_version = "1.3.7"
@@ -85,6 +86,7 @@ dependencies {
     // ViewModel Lifecycle Scopes
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0"
     implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.2.0"
+    implementation "androidx.lifecycle:lifecycle-extensions:2.2.0"
 
     // Kodein
     def kodein_version = "6.4.0"
